# codin

./: .env-example  .gitignore  .ruff.toml  CONTRIBUTING.md  Makefile  README.md  config.yaml  make.ps1  pyproject.toml  setup.py  test_edit.py  test_replace.txt  test_search.py
.claude-bridge/: context-2025-06-14-12-17-52.jsonl  context-2025-06-14-12-29-59.jsonl  context-2025-06-15-01-58-41.jsonl  log.txt  requests-2025-06-14-12-29-59.jsonl  requests-2025-06-15-02-26-45.jsonl  requests-2025-06-15-02-38-20.jsonl  transformed-2025-06-14-12-29-59.jsonl
.cursor/rules/: code.mdc
docs/: OpenHands_SWE_Benchmark_Analysis.md  README.md  a2a.md  agent_architecture.md  agent_logic_comparison.md  architecture.md  coding_agent.md  coding_tasks.md  concurrent_runner.md  core_architecture.md  debug_events.md  design.md  enhanced_prompt_system.md  loop.md  mailbox.md  prompt.md  prompt_system.md  prompt_version.md  session_manager.md  tool_refactor_design.md  tool_system.md  tools.md
examples/: __init__.py  agent_planner_demo.py  hello_world.py  hello_world_test.py  lifecycle_demo.py  ray_parallel_agents.py  simplified_tool_demo.py  tool_refactor_demo.py
prompt_templates/: code_agent_loop.yaml  code_agent_summary.yaml  conversation_summary.yaml
prompts/: plan_execute_plan.yaml
src/a2a/: __init__.py  types.py
src/codin/: __init__.py  config.py  id.py  lifecycle.py
tests/: __init__.py  conftest.py  test_api.py  test_basic.py  test_config.py  test_file_replay_service.py  test_message_utils.py  test_mocked.py  test_prompt_run.py  test_replay_service.py
tests/actor/: mailbox_test.py  ray_mailbox_test.py  test_actor_system.py  test_dispatcher_concurrency.py  test_dispatcher_multiagent.py  test_dispatcher_reconnect.py  test_dispatcher_release.py  test_mailbox_system.py  test_ray_scheduler.py  test_work_stealing_system.py
tests/agent/: __init__.py  test_base_agent.py  test_base_agent_loop.py  test_base_planner.py  test_codeact_planner.py  test_concurrent_runner.py  test_dag.py  test_debug_events.py  test_enhanced_steps.py  test_plan_execute_agent.py  (+3 more)
(+196 files in other folders)
