[project]
name = "codin"
version = "0.1.0"
description = "A versatile agent framework with robust HTTP client support"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "jucheng"},
]
dependencies = [
    "httpx>=0.25.0",
    "jinja2>=3.0.0",
    "pydantic>=2.0.0",
    "tenacity>=8.0.0",
    "aiohttp>=3.8.0",
    "openai>=1.0.0",
    "anthropic>=0.5.0",
    "google-generativeai>=0.3.0",
    "python-dotenv>=1.0.0",
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "redis>=6.1.0",
    "a2a-sdk>=0.2.3",
    "a2a>=0.44",
    "click>=8.0.0",
    "pyyaml>=6.0.0",
    "mcp>=1.9.1",
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",
    "numpy>=1.24.0",
    "lancedb>=0.4.7",
    "fastapi>=0.110.0",
]

[project.scripts]
codin = "codin.cli.commands:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "tenacity>=8.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.0.270",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codin"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"

[tool.hatch.build.targets.sdist]
exclude = [
  "tests/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v"
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py313"
select = ["E", "F", "B", "I"]
ignore = []

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "tenacity>=8.0.0",
]
